scriptax/grammar/build/Ah5Parser.py
# Generated from /home/shawn/Documents/projects/Apitax/Scriptax/scriptax/grammar/src/Ah5.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class Ah5Parser ( Parser ):

    grammarFileName = "Ah5.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'>'", "'<'", 
                     "'>='", "'<='", "'=='", "'!='", "'&&'", "'||'", "'++'", 
                     "'--'", "'+='", "'-='", "'*='", "'/='", "'='", "'+'", 
                     "'-'", "'*'", "'/'", "'^'", "'!'", "'_'", "'.'", "':'", 
                     "'%'", "','", "'|'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'{%'", "'%}'", "'{'", "'}'", "'('", "')'", "'['", 
                     "']'", "'$'", "';'", "'#'", "'->'", "'@'", "'..'" ]

    symbolicNames = [ "<INVALID>", "AND", "OR", "GT", "LT", "GE", "LE", 
                      "EQ", "NEQ", "SAND", "SOR", "D_PLUS", "D_MINUS", "PE", 
                      "ME", "MUE", "DE", "EQUAL", "PLUS", "MINUS", "MUL", 
                      "DIV", "POW", "NOT", "ULINE", "DOT", "COLON", "PERCENT", 
                      "COMMA", "BAR", "INT", "FLOAT", "FALSE", "TRUE", "STRING", 
                      "HEX", "NONE", "EXECUTEOPEN", "EXECUTECLOSE", "BLOCKOPEN", 
                      "BLOCKCLOSE", "LPAREN", "RPAREN", "SOPEN", "SCLOSE", 
                      "VARIABLE_ID", "TERMINATOR", "HASH", "ARROW", "AT", 
                      "SIGNAL", "IF", "ELSE", "FOR", "EACH", "WHILE", "UNTIL", 
                      "SWITCH", "CASE", "RETURNS", "CONTINUE", "DONE", "DEFAULT", 
                      "TYPE_INT", "TYPE_DICT", "TYPE_LIST", "TYPE_DEC", 
                      "TYPE_STR", "TYPE_BOOL", "TYPE_HEX", "TYPE_THREAD", 
                      "TYPE_METHOD", "TYPE_INSTANCE", "TYPE_PYTHONIC", "TYPE_ANY", 
                      "AHOPTIONS", "IMPORT", "EXTEND", "DEL", "OS", "LOG", 
                      "ERROR", "TYPE", "SCRIPT", "STATIC", "ASYNC", "IN", 
                      "AS", "FROM", "WITH", "AWAIT", "NEW", "SUPER", "RANGE", 
                      "LABEL", "BLOCK_COMMENT", "LINE_COMMENT", "NEWLINE", 
                      "WS" ]

    RULE_prog = 0
    RULE_script_structure = 1
    RULE_global_statements = 2
    RULE_statements = 3
    RULE_statement = 4
    RULE_expr = 5
    RULE_atom = 6
    RULE_terminated = 7
    RULE_runnable_statements = 8
    RULE_non_terminated = 9
    RULE_method_call_statement = 10
    RULE_each_statement = 11
    RULE_atom_callback = 12
    RULE_callback_block = 13
    RULE_method_def_atom = 14
    RULE_method_def_statement = 15
    RULE_flow = 16
    RULE_if_statement = 17
    RULE_for_statement = 18
    RULE_until_statement = 19
    RULE_while_statement = 20
    RULE_switch_statement = 21
    RULE_case_statement = 22
    RULE_default_statement = 23
    RULE_range_function = 24
    RULE_block = 25
    RULE_done_statement = 26
    RULE_continue_statement = 27
    RULE_os_statement = 28
    RULE_log_statement = 29
    RULE_flexible_parameter_block = 30
    RULE_flexible_parameter = 31
    RULE_import_statement = 32
    RULE_extends_statement = 33
    RULE_atom_create_instance = 34
    RULE_ahoptions_statement = 35
    RULE_optional_parameters_block = 36
    RULE_optional_parameter = 37
    RULE_dict_signal = 38
    RULE_casting = 39
    RULE_assignment_statement = 40
    RULE_data_type = 41
    RULE_atom_obj_dict = 42
    RULE_dict_comp = 43
    RULE_atom_obj_list = 44
    RULE_atom_obj_enum = 45
    RULE_error_statement = 46
    RULE_inject = 47
    RULE_condition = 48
    RULE_return_statement = 49
    RULE_typing = 50
    RULE_count = 51
    RULE_delete_statement = 52
    RULE_await_statement = 53
    RULE_reflection = 54
    RULE_required_parameter = 55
    RULE_labels = 56
    RULE_label_comp = 57
    RULE_label = 58
    RULE_attributes = 59
    RULE_atom_string = 60
    RULE_atom_number = 61
    RULE_atom_boolean = 62
    RULE_atom_hex = 63
    RULE_atom_none = 64

    ruleNames =  [ "prog", "script_structure", "global_statements", "statements", 
                   "statement", "expr", "atom", "terminated", "runnable_statements", 
                   "non_terminated", "method_call_statement", "each_statement", 
                   "atom_callback", "callback_block", "method_def_atom", 
                   "method_def_statement", "flow", "if_statement", "for_statement", 
                   "until_statement", "while_statement", "switch_statement", 
                   "case_statement", "default_statement", "range_function", 
                   "block", "done_statement", "continue_statement", "os_statement", 
                   "log_statement", "flexible_parameter_block", "flexible_parameter", 
                   "import_statement", "extends_statement", "atom_create_instance", 
                   "ahoptions_statement", "optional_parameters_block", "optional_parameter", 
                   "dict_signal", "casting", "assignment_statement", "data_type", 
                   "atom_obj_dict", "dict_comp", "atom_obj_list", "atom_obj_enum", 
                   "error_statement", "inject", "condition", "return_statement", 
                   "typing", "count", "delete_statement", "await_statement", 
                   "reflection", "required_parameter", "labels", "label_comp", 
                   "label", "attributes", "atom_string", "atom_number", 
                   "atom_boolean", "atom_hex", "atom_none" ]

    EOF = Token.EOF
    AND=1
    OR=2
    GT=3
    LT=4
    GE=5
    LE=6
    EQ=7
    NEQ=8
    SAND=9
    SOR=10
    D_PLUS=11
    D_MINUS=12
    PE=13
    ME=14
    MUE=15
    DE=16
    EQUAL=17
    PLUS=18
    MINUS=19
    MUL=20
    DIV=21
    POW=22
    NOT=23
    ULINE=24
    DOT=25
    COLON=26
    PERCENT=27
    COMMA=28
    BAR=29
    INT=30
    FLOAT=31
    FALSE=32
    TRUE=33
    STRING=34
    HEX=35
    NONE=36
    EXECUTEOPEN=37
    EXECUTECLOSE=38
    BLOCKOPEN=39
    BLOCKCLOSE=40
    LPAREN=41
    RPAREN=42
    SOPEN=43
    SCLOSE=44
    VARIABLE_ID=45
    TERMINATOR=46
    HASH=47
    ARROW=48
    AT=49
    SIGNAL=50
    IF=51
    ELSE=52
    FOR=53
    EACH=54
    WHILE=55
    UNTIL=56
    SWITCH=57
    CASE=58
    RETURNS=59
    CONTINUE=60
    DONE=61
    DEFAULT=62
    TYPE_INT=63
    TYPE_DICT=64
    TYPE_LIST=65
    TYPE_DEC=66
    TYPE_STR=67
    TYPE_BOOL=68
    TYPE_HEX=69
    TYPE_THREAD=70
    TYPE_METHOD=71
    TYPE_INSTANCE=72
    TYPE_PYTHONIC=73
    TYPE_ANY=74
    AHOPTIONS=75
    IMPORT=76
    EXTEND=77
    DEL=78
    OS=79
    LOG=80
    ERROR=81
    TYPE=82
    SCRIPT=83
    STATIC=84
    ASYNC=85
    IN=86
    AS=87
    FROM=88
    WITH=89
    AWAIT=90
    NEW=91
    SUPER=92
    RANGE=93
    LABEL=94
    BLOCK_COMMENT=95
    LINE_COMMENT=96
    NEWLINE=97
    WS=98

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def script_structure(self):
            return self.getTypedRuleContext(Ah5Parser.Script_structureContext,0)


        def EOF(self):
            return self.getToken(Ah5Parser.EOF, 0)

        def getRuleIndex(self):
            return Ah5Parser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = Ah5Parser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.script_structure()
            self.state = 131
            self.match(Ah5Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Script_structureContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def global_statements(self):
            return self.getTypedRuleContext(Ah5Parser.Global_statementsContext,0)


        def statements(self):
            return self.getTypedRuleContext(Ah5Parser.StatementsContext,0)


        def getRuleIndex(self):
            return Ah5Parser.RULE_script_structure

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScript_structure" ):
                listener.enterScript_structure(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScript_structure" ):
                listener.exitScript_structure(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScript_structure" ):
                return visitor.visitScript_structure(self)
            else:
                return visitor.visitChildren(self)




    def script_structure(self):

        localctx = Ah5Parser.Script_structureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_script_structure)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.global_statements()
            self.state = 134
            self.statements()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Global_statementsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def import_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Ah5Parser.Import_statementContext)
            else:
                return self.getTypedRuleContext(Ah5Parser.Import_statementContext,i)


        def TERMINATOR(self, i:int=None):
            if i is None:
                return self.getTokens(Ah5Parser.TERMINATOR)
            else:
                return self.getToken(Ah5Parser.TERMINATOR, i)

        def extends_statement(self):
            return self.getTypedRuleContext(Ah5Parser.Extends_statementContext,0)


        def ahoptions_statement(self):
            return self.getTypedRuleContext(Ah5Parser.Ahoptions_statementContext,0)


        def getRuleIndex(self):
            return Ah5Parser.RULE_global_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobal_statements" ):
                listener.enterGlobal_statements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobal_statements" ):
                listener.exitGlobal_statements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobal_statements" ):
                return visitor.visitGlobal_statements(self)
            else:
                return visitor.visitChildren(self)




    def global_statements(self):

        localctx = Ah5Parser.Global_statementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_global_statements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==Ah5Parser.IMPORT or _la==Ah5Parser.FROM:
                self.state = 136
                self.import_statement()
                self.state = 137
                self.match(Ah5Parser.TERMINATOR)
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==Ah5Parser.EXTEND:
                self.state = 144
                self.extends_statement()
                self.state = 145
                self.match(Ah5Parser.TERMINATOR)


            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==Ah5Parser.AHOPTIONS:
                self.state = 149
                self.ahoptions_statement()
                self.state = 150
                self.match(Ah5Parser.TERMINATOR)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Ah5Parser.StatementContext)
            else:
                return self.getTypedRuleContext(Ah5Parser.StatementContext,i)


        def getRuleIndex(self):
            return Ah5Parser.RULE_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatements" ):
                listener.enterStatements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatements" ):
                listener.exitStatements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatements" ):
                return visitor.visitStatements(self)
            else:
                return visitor.visitChildren(self)




    def statements(self):

        localctx = Ah5Parser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << Ah5Parser.LT) | (1 << Ah5Parser.NOT) | (1 << Ah5Parser.NONE) | (1 << Ah5Parser.IF) | (1 << Ah5Parser.FOR) | (1 << Ah5Parser.EACH) | (1 << Ah5Parser.WHILE) | (1 << Ah5Parser.UNTIL) | (1 << Ah5Parser.SWITCH) | (1 << Ah5Parser.RETURNS) | (1 << Ah5Parser.CONTINUE) | (1 << Ah5Parser.DONE) | (1 << Ah5Parser.TYPE_INT))) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & ((1 << (Ah5Parser.TYPE_DICT - 64)) | (1 << (Ah5Parser.TYPE_LIST - 64)) | (1 << (Ah5Parser.TYPE_DEC - 64)) | (1 << (Ah5Parser.TYPE_STR - 64)) | (1 << (Ah5Parser.TYPE_BOOL - 64)) | (1 << (Ah5Parser.TYPE_HEX - 64)) | (1 << (Ah5Parser.TYPE_THREAD - 64)) | (1 << (Ah5Parser.TYPE_METHOD - 64)) | (1 << (Ah5Parser.TYPE_INSTANCE - 64)) | (1 << (Ah5Parser.TYPE_PYTHONIC - 64)) | (1 << (Ah5Parser.TYPE_ANY - 64)) | (1 << (Ah5Parser.DEL - 64)) | (1 << (Ah5Parser.OS - 64)) | (1 << (Ah5Parser.LOG - 64)) | (1 << (Ah5Parser.ERROR - 64)) | (1 << (Ah5Parser.SCRIPT - 64)) | (1 << (Ah5Parser.STATIC - 64)) | (1 << (Ah5Parser.ASYNC - 64)) | (1 << (Ah5Parser.AWAIT - 64)) | (1 << (Ah5Parser.SUPER - 64)) | (1 << (Ah5Parser.LABEL - 64)))) != 0):
                self.state = 154
                self.statement()
                self.state = 159
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def terminated(self):
            return self.getTypedRuleContext(Ah5Parser.TerminatedContext,0)


        def non_terminated(self):
            return self.getTypedRuleContext(Ah5Parser.Non_terminatedContext,0)


        def NOT(self):
            return self.getToken(Ah5Parser.NOT, 0)

        def getRuleIndex(self):
            return Ah5Parser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = Ah5Parser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==Ah5Parser.NOT:
                self.state = 160
                self.match(Ah5Parser.NOT)


            self.state = 165
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [Ah5Parser.LT, Ah5Parser.NONE, Ah5Parser.EACH, Ah5Parser.RETURNS, Ah5Parser.CONTINUE, Ah5Parser.DONE, Ah5Parser.TYPE_INT, Ah5Parser.TYPE_DICT, Ah5Parser.TYPE_LIST, Ah5Parser.TYPE_DEC, Ah5Parser.TYPE_STR, Ah5Parser.TYPE_BOOL, Ah5Parser.TYPE_HEX, Ah5Parser.TYPE_THREAD, Ah5Parser.TYPE_METHOD, Ah5Parser.TYPE_INSTANCE, Ah5Parser.TYPE_PYTHONIC, Ah5Parser.TYPE_ANY, Ah5Parser.DEL, Ah5Parser.OS, Ah5Parser.LOG, Ah5Parser.ERROR, Ah5Parser.AWAIT, Ah5Parser.SUPER, Ah5Parser.LABEL]:
                self.state = 163
                self.terminated()
                pass
            elif token in [Ah5Parser.IF, Ah5Parser.FOR, Ah5Parser.WHILE, Ah5Parser.UNTIL, Ah5Parser.SWITCH, Ah5Parser.SCRIPT, Ah5Parser.STATIC, Ah5Parser.ASYNC]:
                self.state = 164
                self.non_terminated()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def labels(self):
            return self.getTypedRuleContext(Ah5Parser.LabelsContext,0)


        def inject(self):
            return self.getTypedRuleContext(Ah5Parser.InjectContext,0)


        def LPAREN(self):
            return self.getToken(Ah5Parser.LPAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Ah5Parser.ExprContext)
            else:
                return self.getTypedRuleContext(Ah5Parser.ExprContext,i)


        def RPAREN(self):
            return self.getToken(Ah5Parser.RPAREN, 0)

        def MINUS(self):
            return self.getToken(Ah5Parser.MINUS, 0)

        def NOT(self):
            return self.getToken(Ah5Parser.NOT, 0)

        def runnable_statements(self):
            return self.getTypedRuleContext(Ah5Parser.Runnable_statementsContext,0)


        def casting(self):
            return self.getTypedRuleContext(Ah5Parser.CastingContext,0)


        def count(self):
            return self.getTypedRuleContext(Ah5Parser.CountContext,0)


        def typing(self):
            return self.getTypedRuleContext(Ah5Parser.TypingContext,0)


        def reflection(self):
            return self.getTypedRuleContext(Ah5Parser.ReflectionContext,0)


        def atom(self):
            return self.getTypedRuleContext(Ah5Parser.AtomContext,0)


        def POW(self):
            return self.getToken(Ah5Parser.POW, 0)

        def MUL(self):
            return self.getToken(Ah5Parser.MUL, 0)

        def DIV(self):
            return self.getToken(Ah5Parser.DIV, 0)

        def PERCENT(self):
            return self.getToken(Ah5Parser.PERCENT, 0)

        def PLUS(self):
            return self.getToken(Ah5Parser.PLUS, 0)

        def GE(self):
            return self.getToken(Ah5Parser.GE, 0)

        def LE(self):
            return self.getToken(Ah5Parser.LE, 0)

        def GT(self):
            return self.getToken(Ah5Parser.GT, 0)

        def LT(self):
            return self.getToken(Ah5Parser.LT, 0)

        def EQ(self):
            return self.getToken(Ah5Parser.EQ, 0)

        def NEQ(self):
            return self.getToken(Ah5Parser.NEQ, 0)

        def AND(self):
            return self.getToken(Ah5Parser.AND, 0)

        def OR(self):
            return self.getToken(Ah5Parser.OR, 0)

        def getRuleIndex(self):
            return Ah5Parser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)


